[package]
name = "zeta"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "database"
harness = false

[dependencies]
murmur3 = { git = "https://github.com/stusmall/murmur3.git" }
hotpath = { version = "0.5", optional = true }
ahash = "0.8.12"
bytes = "1.10.1"
lz4_flex = "0.11.5"

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-count-total = ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-self = ["hotpath/hotpath-alloc-self"]
hotpath-off = ["hotpath/hotpath-off"]

[profile.release]
debug = true
